# flask_web_development

./: .gitignore  .gitmodules  pyproject.toml
ch02/: bad_request.py  do_redirect.py  make_response.py  request_playground.http  request_playground.py  simple_app.http  simple_app.py
ch03/: hello.py
ch03/templates/: base.jinja2  index.html  index.jinja2
